tests/baselines/reference/spreadUnion3.errors.txt
tests/cases/conformance/types/spread/spreadUnion3.ts(2,14): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/spread/spreadUnion3.ts(9,9): error TS2322: Type 'number | undefined' is not assignable to type 'number'.
  Type 'undefined' is not assignable to type 'number'.
tests/cases/conformance/types/spread/spreadUnion3.ts(17,11): error TS2698: Spread types may only be created from object types.
tests/cases/conformance/types/spread/spreadUnion3.ts(17,37): error TS2698: Spread types may only be created from object types.
tests/cases/conformance/types/spread/spreadUnion3.ts(18,11): error TS2698: Spread types may only be created from object types.


==== tests/cases/conformance/types/spread/spreadUnion3.ts (5 errors) ====
    function f(x: { y: string } | undefined): { y: string } {
        return { y: 123, ...x } // y: string | number
                 ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6500 tests/cases/conformance/types/spread/spreadUnion3.ts:1:45: The expected type comes from property 'y' which is declared here on type '{ y: string; }'
    }
    f(undefined)
    
    
    function g(t?: { a: number } | null): void {
        let b = { ...t };
        let c: number = b.a;  // might not have 'a'
            ~
!!! error TS2322: Type 'number | undefined' is not assignable to type 'number'.
!!! error TS2322:   Type 'undefined' is not assignable to type 'number'.
    }
    g()
    g(undefined)
    g(null)
    
    // spreading nothing but null and undefined is not allowed
    declare const nullAndUndefinedUnion: null | undefined;
    var x = { ...nullAndUndefinedUnion, ...nullAndUndefinedUnion };
              ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
                                        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
    var y = { ...nullAndUndefinedUnion };
              ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
    